# SBM_dashboard_v1

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: runtime.yaml
src/: app.py  image_enhancement.py  image_store.py  metadata.py  mqtt.py  runtime_config.py  stats.py  temperature_store.py
src/sbm_dashboard/: __init__.py  config.py  image_store.py  metadata.py  stats.py
src/sbm_dashboard/ui/: components.py  main_page.py  sidebar.py
src/ui/: __init__.py  components.py  main_page.py  sidebar.py
