[project]
name = "sbm-dashboard-v1"
version = "0.1.0"
description = "Streamlit dashboard for SBM inline defect validation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "pillow>=10",
    "paho-mqtt>=2",
    "pandas>=2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
