[project]
name = "sbm-dashboard-v1"
version = "0.1.0"
description = "Streamlit dashboard for SBM inline defect validation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.58",
    "pillow>=10",
    "paho-mqtt>=2",
    "pandas>=2",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "app",
    "image_enhancement",
    "image_store",
    "metadata",
    "mqtt",
    "runtime_config",
    "stats",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ui*"]
